# LLM-Pipeline-for-Automated-Extraction-of-Nanozyme-Data

./: README.md  agent_app.py  auto_extraction.py  logger.py  pyproject.toml  structured_output.ipynb  utils.py
data_preproccessing/: README.md  pdf2txt.py
graph_processing/: README.md  image_extracting.py  image_extracting_yolo.py  inference.py  plots.yaml  train.py
llm-extraction/: README.md
llm-extraction/data/: README.md  get_data.py  merge_scripts.py
llm-extraction/inference/: README.md  ner_agent.py
llm-extraction/train/: README.md  requirements.txt  train.py
